fix: align pin icon in edit mode

--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -86,6 +86,8 @@ $block: '.#{variables.$ns}composite-bar';
     &__menu-group-item {
         position: relative;
 
+        width: calc(100% + 16px);
+
         &_edit {
             left: -16px;
         }
